removed taxonomy js tag

--- a/app/views/spree/admin/taxonomies/edit.erb
+++ b/app/views/spree/admin/taxonomies/edit.erb
@@ -38,7 +38,7 @@
 <% end %>
 
 <% content_for :head do %>
-  <%= javascript_include_tag 'admin/taxonomy_overrides' %>
+  <%#= javascript_include_tag 'admin/taxonomy_overrides' %>
   <%= render :partial => 'spree/admin/shared/taxonomy_translations' %>
 
   <%= javascript_tag do -%>
