JS added inline

--- a/app/views/spree/admin/taxons/sort_products.html.erb
+++ b/app/views/spree/admin/taxons/sort_products.html.erb
@@ -1,3 +1,4 @@
+
 <%= render :partial => 'spree/admin/shared/configuration_menu' %>
 
 <% content_for :page_title do %>
@@ -34,5 +35,23 @@
     <% end %>
   <% end %>
 </ul>
+<script type="text/javascript">
+var saveOrder;
 
+saveOrder = function() {
+  var data;
+  data = $("#products li").map(function() {
+    return $(this).children().attr("value");
+  }).get();
+  $("input[name=product_positions]").val(data.join(","));
+  return $("#save_order").html('<button class="button btn-primary"><i class="icon-ok icon-white"></i> <%= I18n.t(:save_sorted_order) %></button>');
+};
+
+$("#products, #list2").dragsort({
+  dragSelector: "div",
+  dragBetween: true,
+  dragEnd: saveOrder,
+  placeHolderTemplate: "<li class='placeHolder'><div></div></li>"
+});
+</script>
 <%#= javascript_include_tag 'admin/sort_products' %>
